# local-manga-reader

./: Cargo.toml  LICENSE  README.md  README.zh.md  styles.css
.cargo/: config.toml
public/: guide.html
shared/: Cargo.toml
shared/src/: config.rs  image_data.rs  lib.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  source.rs
src-tauri/src/source/: directory_source.rs  epub_source.rs  mobi_source.rs  pdf_source.rs  sevenz_source.rs  tar_source.rs  zipped_source.rs
