[package]
name = "local-manga-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_manga_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.0"
global-hotkey = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "6.0.0", features = ["deflate", "aes-crypto"] }
sevenz-rust = "0.6.1"
md5 = "0.8.0"
anyhow = "1.0.0"
lazy_static = "1.5.0"
epub = "2.1.4"
scraper = "0.17"
path-clean = "1.0"
urlencoding = "2.1"
image = "0.25.8"
rfd = "0.15.4"
shared = { path = "../shared" }
