[package]
name = "local-manga-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[lib]
name = "local_manga_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.0"
tokio = { version = "1.48.0", features = ["sync", "rt", "time", "macros"] }
global-hotkey = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "6.0.0", features = ["deflate", "aes-crypto"] }
sevenz-rust2 = "=0.19.1"
mobi = "0.8.0"
sha2 = "0.10.9"
anyhow = "1.0.0"
lazy_static = "1.5.0"
epub = "2.1.4"
scraper = "0.17"
path-clean = "1.0"
urlencoding = "2.1"
image = "0.25.8"
rfd = "0.15.4"
hayro = { version = "0.4.0", features = ["jpeg2000"] }
hayro-interpret = { version = "0.4.0", features = ["jpeg2000"] }
shared = { path = "../shared" }
